# xjtu_aim25_new

./: CMakeLists.txt  README.md  autostart.sh  main.cpp  readme.md  recompile.sh  restart.sh  ros2_compile.sh  setup.sh
armor/: CMakeLists.txt
armor/include/: AimAuto.hpp  OpenvinoInfer.hpp  net_detector.hpp  tracker.hpp
armor/src/: AimAuto.cpp  KalmanFilter.cpp  OpenvinoInfer.cpp  tracker.cpp
model/: 0526.xml  0708.xml
params/include/: globalParam.hpp
ros2/: README.md
ros2/src/rm_camera_bingup/: CMakeLists.txt  package.xml
ros2/src/rm_camera_bingup/config/: camera_params.yaml
ros2/src/rm_camera_bingup/include/: camera.hpp
ros2/src/rm_camera_bingup/launch/: hk_camera.launch.py  video_player.launch.py
ros2/src/rm_camera_bingup/src/: camera.cpp  hk_camera_node.cpp  video_image_node.cpp
ros2/src/rm_camera_bingup/tools/: reader  reader.cpp
ros2/src/rm_comm_ros2/: CMakeLists.txt  package.xml
ros2/src/rm_comm_ros2/launch/: rm_comm_bringup.launch.py
ros2/src/rm_comm_ros2/src/: serial_rw_node.cpp
ros2/src/rm_dx_vision/: CMakeLists.txt  package.xml
ros2/src/rm_dx_vision/config/: armor_params.yaml
ros2/src/rm_dx_vision/include/: AimAuto.hpp  MvCameraControl.h  OpenvinoInfer.hpp
ros2/src/rm_dx_vision/launch/: armor_node.launch.py  armor_node_shm.launch.py
ros2/src/rm_dx_vision/src/: ros2_main.cpp
serialPort/: CMakeLists.txt
serialPort/include/: MessageManager.hpp  SerialPort.hpp
serialPort/src/: MessageManager.cpp  SerialPort.cpp
video/blue/: v2.avi  v3.avi
windmill/: CMakeLists.txt
windmill/include/: WMIdentify.hpp  WMInference.hpp  WMPredict.hpp  angular_velocity_fitter.hpp  traditional_detection.hpp
windmill/src/: WMIdentify.cpp  WMInference.cpp  WMPredict.cpp  angular_velocity_fitter.cpp  traditional_detection.cpp
