<?xml version="1.0"?>
<package format="3">
  <name>rm_camera_bringup</name>
  <version>0.0.1</version>
  <description>ROS2 package that wraps HikRobot camera driver and publishes images.</description>
  <maintainer email="xw_luo0804@qq.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 