<?xml version="1.0"?>
<package format="3">
  <name>rm_dx_vision</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper package for DX_autoaim armor library.</description>
  <maintainer email="you@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>opencv</depend>
  <depend>eigen</depend>
  <depend>ceres</depend>
  <depend>glog</depend>
  <depend>openvino</depend>

  <!-- 新增 ROS 2 依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 